Logging in functionality and context processors

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -175,7 +175,7 @@
                     <h5>Contact Us</h5>
                     <ul class="contact-info">
                         <li><i class="fas fa-phone"></i> +27 123 456 789</li>
-                        <li><i class="fas fa-envelope"></i> info@propertyspotter.co.za</li>
+                        <li><i class="fas fa-envelope"></i> {{ SUPPORT_EMAIL }}</li>
                     </ul>
                 </div>
             </div>
