--- a/app/templates/spotter_layout.html
+++ b/app/templates/spotter_layout.html
@@ -161,7 +161,7 @@
                         <i class="fas fa-user me-2"></i>Profile
                     </a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">
+                    <li><a class="dropdown-item" href="/logout">
                         <i class="fas fa-sign-out-alt me-2"></i>Logout
                     </a></li>
                 </ul>
@@ -172,7 +172,11 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <nav class="nav flex-column">
-            <a class="nav-link" href="#">
+	    <a class="nav-link" href="/dashboard">
+                <i class="fas fa-tachometer-alt"></i>
+                <span>Dashboard</span>
+            </a>
+            <a class="nav-link" href="/leads">
                 <i class="fas fa-clipboard-list"></i>
                 <span>My Leads</span>
             </a>
@@ -180,7 +184,7 @@
                 <i class="fas fa-plus-circle"></i>
                 <span>New Lead</span>
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/history">
                 <i class="fas fa-history"></i>
                 <span>History</span>
             </a>
