Profile update views added

--- a/app/templates/spotter_layout.html
+++ b/app/templates/spotter_layout.html
@@ -157,7 +157,7 @@
                     <span>{{ USERDATA.first_name }} {{ USERDATA.last_name }}</span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">
+                    <li><a class="dropdown-item" href="/profile">
                         <i class="fas fa-user me-2"></i>Profile
                     </a></li>
                     <li><hr class="dropdown-divider"></li>
@@ -188,7 +188,7 @@
                 <i class="fas fa-history"></i>
                 <span>History</span>
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/profile">
                 <i class="fas fa-user"></i>
                 <span>Profile</span>
             </a>
