--- a/app/templates/spotter_layout.html
+++ b/app/templates/spotter_layout.html
@@ -180,7 +180,7 @@
                 <i class="fas fa-clipboard-list"></i>
                 <span>My Leads</span>
             </a>
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="/newLead">
                 <i class="fas fa-plus-circle"></i>
                 <span>New Lead</span>
             </a>
