Splitting index page layout

--- a/app/templates/spotter_dashboard.html
+++ b/app/templates/spotter_dashboard.html
@@ -173,7 +173,7 @@
                                     <span class="badge bg-{{ lead.status_color }}">{{ lead.status }}</span>
                                 </td>
                                 <td>{{ lead.created_at|date:"M d, Y" }}</td>
-                                <td>${{ lead.value }}</td>
+                                <td>R{{ lead.value }}</td>
                             </tr>
                             {% endfor %}
                         </tbody>
