--- a/app/templates/spotter_profile.html
+++ b/app/templates/spotter_profile.html
@@ -54,11 +54,11 @@
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Username</label>
-                            <input type="text" class="form-control" name="username" value="{{ USERDATA.username }}" required>
+                            <input type="text" class="form-control" name="username" value="{{ USERDATA.username }}" disabled required>
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Email</label>
-                            <input type="email" class="form-control" name="email" value="{{ USERDATA.email }}" required>
+                            <input type="email" class="form-control" name="email" value="{{ USERDATA.email }}" disabled required>
                         </div>
                         <div class="col-md-6">
                             <label class="form-label">Phone</label>
