Verification fixed and email renders

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -133,7 +133,7 @@
 <body>
     <div class="login-container">
         <div class="logo-container">
-            <img src="{% static 'images/logo.png' %}" alt="Property Spotter Logo">
+            <a href="{% url 'index' %}"><img src="{% static 'images/logo.png' %}" alt="Property Spotter Logo"></a>
         </div>
         <h1>Welcome Back</h1>
         <form id="loginForm">
