--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,7 +42,7 @@
                                 <span>Flexible Hours</span>
                             </div>
                         </div>
-                        <a href="/register-spotter" class="btn btn-secondary btn-lg">Start Earning Today</a>
+                        <a href="/register" class="btn btn-secondary btn-lg">Start Earning Today</a>
                     </div>
                 </div>
             </div>
