Agent details Modal fixed

--- a/app/templates/base_agency_admin.html
+++ b/app/templates/base_agency_admin.html
@@ -203,7 +203,7 @@
                         </a>
                     </li>
                     <li class="{% if request.resolver_match.url_name == 'agents' %}active{% endif %}">
-                        <a href="#">
+                        <a href="/agency/agents/">
                             <i class="fas fa-users"></i>
                             <span>Agents</span>
                         </a>
