Custom Permission's moddleware removed

--- a/users/templates/setup_password.html
+++ b/users/templates/setup_password.html
@@ -113,6 +113,7 @@
             }
             
             try {
+                console.log('Sending request with token:', token);
                 const response = await fetch('/api/users/set-password/', {
                     method: 'POST',
                     headers: {
