Agency dashboard Payment Processing Added

--- a/app/templates/base_agency_admin.html
+++ b/app/templates/base_agency_admin.html
@@ -221,7 +221,7 @@
                 <span class="menu-header">MANAGEMENT</span>
                 <ul class="list-unstyled">
                     <li class="{% if request.resolver_match.url_name == 'payments' %}active{% endif %}">
-                        <a href="#">
+                        <a href="/agency/payments/">
                             <i class="fas fa-money-bill-wave"></i>
                             <span>Spotter Payments</span>
                         </a>
